<resources>
    <string name="app_name">Learn 09082021 v001</string>
    <string name="djdv">djdv</string>
    <string name="title_student">Title : Student</string>
    <string name="name_student">Name : Student</string>
    <string name="android_student">Android : Student</string>
    <string name="name">Name :</string>
    <string name="score">Score :</string>
    <string name="ios_student">IOS : Student</string>
    <string name="name">Name :</string>
    <string name="score">Score :</string>
    <string name="start">START</string>
    <string name="title_student">Title : Student</string>
    <string name="name_student">Name : Student</string>
    <string name="android_student">Android : Student</string>
    <string name="name">Name :</string>
    <string name="full_name">FULL NAME</string>
    <string name="score">Score :</string>
    <string name="_0">0</string>
    <string name="increase">INCREASE</string>
    <string name="decrease">DECREASE</string>
    <string name="ios_student">IOS : Student</string>
    <string name="name">Name :</string>
    <string name="full_name">FULL NAME</string>
    <string name="_0">0</string>
    <string name="increase">INCREASE</string>
    <string name="decrease">DECREASE</string>
    <string name="done">DONE</string>
</resources>